# McFlurry-Chocolate

./: .gitignore  1.cpp  CMakeLists.txt  README.md  test.cpp  wt_config.xml
.circleci/: config.yml
css/: Tinder.css  mainPage.css  tinder.css
hash/: md5.cpp
headers_client/: HttpClient.h  MainPage.h  MainPageWidget.h  PairWidget.h  Profile.h  ProfileWidget.h  SearchPageWidget.h  TinderApplication.h  User.h  UserWidget.h
include_client/: MainPageWidget.h  PairWidget.h  SearchPageWidget.h  UserWidget.h
include_db/: DIALOGS.h  DataBase.h  PHOTOS.h  Postgre_DB.h  TABLES.h  USERS_INFO.h  USERS_REC.h  marks.h
include_rec/: als.hpp  dbscan.hpp  matrix.h  matrix.hpp  nmf.h  nmf.hpp  recsys.h  recsys.hpp  textsimilarity.hpp  utility.hpp
include_server/: Session.h  TinderApp.h  TinderApplication.hpp  TinderServer.hpp  TinderWidget.hpp  UpdateRec.h  User.h  User.hpp
server/: CMakeLists.txt
server/include/: connection.h  router.h  server.h
server/tests/: test.cpp
server_temp/: TinderServer.cpp  TinderServer.h
src_client/: MainPageWidget.cpp  PairWidget.cpp  ProfileWidget.cpp  SearchPageWidget.cpp  Tinder.cpp  UserWidget.cpp  main.cpp
src_db/: DataBase.cpp  Postgre_DB.cpp  TABLES.cpp  USERS_INFO.cpp
src_rec/: als.cpp  dbscan.cpp  matrix.cpp  nmf.cpp  recsys.cpp  textsimilarity.cpp  utility.cpp
src_server/: Session.cpp  TinderApp.cpp  TinderApplication.cpp  TinderServer.cpp  TinderWidget.cpp  UpdateRec.cpp  User.cpp  main.cpp  tinder.cpp
test/: test.cpp  tests_db.cpp  tests_rec.cpp
tests/: gtests.cpp  test.cpp
tests_rec/: gtests.cpp
